...
                            text: self.$searchTerm)

                        Button(action: {
                            self.viewModel.isActive = true
                            self.viewModel.search(withTerm: self.searchTerm)
                        }) {
                            Text("Search")
                        }
                    }
                    .padding(EdgeInsets(top: 8.0, leading: 16.0, bottom: 8.0, trailing: 16.0))

                    List {
                        ForEach(self.viewModel.images, id: \.id) { image in
...
